data/all_generated_tests/raw_wast_tests/if_IncorrectConditionEvaluation_1684.wast
;; 5. **Test `if` Instruction with Zero Boundary Condition**:    - Description: Execute an `if` statement that checks operand boundary values, especially where `i32` is exactly zero, positive one, and negative one.    - Constraint: Verifies precise boundary condition handling around zero for condition evaluation.    - Incorrect Condition Evaluation: Ensures Wizard Engine does not mistakenly treat values around boundaries incorrectly impacting branch selection.

(assert_invalid
  (module
    (func $boundary_condition
      (block
        (i32.const 0)
        (if (then (i32.const 0)))
        (else
          (i32.const 1)
        )
      )
    )
  )
  "type mismatch"
)